<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:visibility="gone"
            android:id="@+id/start_fragment"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            />
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-2dp"
            android:background="@color/colorPrimary"
            android:padding="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="72dp">

            <include layout="@layout/custom_toolbar" />
        </android.support.v7.widget.Toolbar>
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="-2dp"
            android:background="#f2f2f2"
            android:padding="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@+id/back_button"
                android:text="@string/cityPointer"
                android:textColor="@color/gray_color"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@+id/back_button"
                android:background="@drawable/arrow_botton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginRight="8dp" />

            <TextView
                android:id="@+id/countru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@+id/back_button"
                android:text="Алматы"
                android:textColor="@color/black_color"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginRight="8dp" />
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/constraintLayout"
            android:layout_height="200dp"
            android:background="@color/black_color">

            <LinearLayout
                android:id="@+id/clock_layout"
                android:layout_width="80dp"
                android:layout_height="90dp"

                android:layout_marginStart="82dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">



                <ImageView
                    android:id="@+id/imageClock"
                    android:background="@drawable/click_clock"
                    android:foregroundGravity="center"
                    android:padding="20dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black_color" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:text="@string/clock"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/test_size_catalog"
                    app:layout_constraintEnd_toStartOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:id="@+id/card_layout"
                android:layout_marginEnd="82dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageCard"
                    android:background="@drawable/click_card"
                    android:foregroundGravity="center"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:drawablePadding="10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black_color" />
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/card"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/test_size_catalog"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/car_ecomom_layout"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="24dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">


                <ImageView
                    android:id="@+id/imageEconomCar"
                    android:layout_gravity="center"
                    android:background="@drawable/econom_car_icon_click"
                    android:foregroundGravity="center"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black_color" />


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/economy"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/test_size_catalog"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/car_comfort_layout"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/car_minivan_layout"
                app:layout_constraintStart_toEndOf="@+id/car_ecomom_layout">

                <ImageView
                    android:id="@+id/imageComfort"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/comfort_icon_click"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:drawablePadding="10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black_color" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="68dp"
                    android:layout_height="17dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/comfort"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/test_size_catalog"
                    app:layout_constraintEnd_toStartOf="@+id/textView8"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/car_minivan_layout"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/imageMinivan"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:background="@drawable/minivanclick_icon"
                    android:foregroundGravity="center"
                    android:drawablePadding="10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black_color" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:text="@string/miniven"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/test_size_catalog" />
            </LinearLayout>


        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_list_filter"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


<ProgressBar
    android:id="@+id/prigressBar_catalog"
    android:layout_width="match_parent"
    android:visibility="gone"
    android:layout_height="wrap_content"
    />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:itemIconTint="#000"
        app:itemTextColor="#000"
        app:menu="@menu/my_navigation_items" />
</android.support.v4.widget.DrawerLayout>